--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "fond-of-spryker/company-user-reference-quote-connector": "dev-master"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "dev-master as 1.0.0",
+    "fond-of-codeception/spryker": "^1.0",
     "spryker/code-sniffer": "^0.12",
     "codeception/codeception": "^2.4",
     "codeception/mockery-module": "^0.2",
