--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,23 @@
       "email": "daniel-rose@gmx.de"
     }
   ],
+  "scripts": {
+    "ci": "make ci",
+    "codeception": "make codeception",
+    "phpcs": "make phpcs",
+    "phpstan": "make phpstan"
+  },
   "require": {
-    "php": ">=7.2",
+    "php": ">=7.3",
     "spryker/company-business-unit": "^1.0.0 || ^2.0.0",
     "spryker/permission": "^1.0.0",
     "spryker/permission-extension": "^1.0.0",
     "fond-of-spryker/company-user-reference-quote-connector": "dev-master"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "^1.0",
-    "spryker/code-sniffer": "^0.12",
-    "codeception/codeception": "^2.4",
-    "codeception/mockery-module": "^0.2",
-    "mikey179/vfsstream": "^1.6",
-    "phpro/grumphp": "^0.14",
-    "sebastian/phpcpd": "^4.0",
-    "php-coveralls/php-coveralls": "^2.1"
+    "fond-of-codeception/spryker": "*",
+    "spryker/code-sniffer": "*",
+    "spryker-sdk/phpstan-spryker": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -35,7 +36,13 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfSpryker\\": "tests/FondOfSpryker/",
-      "Generated\\": "src/Generated/"
+      "Generated\\": "src/Generated/",
+      "Orm\\Zed\\": "src/Orm/Zed/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
